# PI_2021

./: CMakeLists.txt
Lab1/: ex1.c  ex2.c  ex3.c
Lab10/: ex1.c
Lab2/: ex1.c  ex3.c
Lab3/: ex2.c  ex3.c
Lab4/: ex2.c  ex3.c
Lab5/: ex1.c
Lab6/: ex2.c
Lab8/: ex1.c  ex2.c
Lab_02/: ex2.c
Lab_04/: ex1.c
Lab_05/: ex3.c
Lab_06/: ex1.c
Lab_07/: ex1.c  ex2.c  ex3.c
Lab_09/: ex3.c
Lab_1/: ex2.c
Lab_10/: ex2.c  ex3.c
Lab_11/: ex3.c
Lab_3/: ex1.c
Lab_5/: ex2.c
Lab_6/: ex3.c
Lab_8/: ex3.c
Lab_9/: ex1.c  ex2.c
