cmake_minimum_required(VERSION 3.22)
project(PI_2021 C)

set(CMAKE_C_STANDARD 11)

add_executable(1_ex1 Lab1/ex1.c)
add_executable(1_ex2 Lab1/ex2.c)
add_executable(1_ex3 Lab1/ex3.c)

add_executable(2_ex1 Lab2/ex1.c)
add_executable(2_ex2 Lab2/ex2.c)
add_executable(2_ex3 Lab2/ex3.c)

add_executable(3_ex1 Lab3/ex1.c)
add_executable(3_ex2 Lab3/ex2.c)
add_executable(3_ex3 Lab3/ex3.c)

add_executable(4_ex1 Lab4/ex1.c)
add_executable(4_ex2 Lab4/ex2.c)
add_executable(4_ex3 Lab4/ex3.c)

add_executable(5_ex1 Lab5/ex1.c)
add_executable(5_ex2 Lab5/ex2.c)
add_executable(5_ex3 Lab5/ex3.c)

add_executable(6_ex1 Lab6/ex1.c)
add_executable(6_ex2 Lab6/ex2.c)
add_executable(6_ex3 Lab6/ex3.c)

add_executable(7_ex1 Lab7/ex1.c)
add_executable(7_ex2 Lab7/ex2.c)
add_executable(7_ex3 Lab7/ex3.c)

add_executable(8_ex1 Lab8/ex1.c)
add_executable(8_ex2 Lab8/ex2.c)
add_executable(8_ex3 Lab8/ex3.c)

add_executable(9_ex1 Lab9/ex1.c)
add_executable(9_ex2 Lab9/ex2.c)
add_executable(9_ex3 Lab9/ex3.c)

add_executable(10_ex1 Lab10/ex1.c)
add_executable(10_ex2 Lab10/ex2.c)
add_executable(10_ex3 Lab10/ex3.c)

add_executable(11_ex1 Lab11/ex1.c)
add_executable(11_ex2 Lab11/ex2.c)
add_executable(11_ex3 Lab11/ex3.c)
