cmake_minimum_required(VERSION 3.22)
project(PI_2021 C)

set(CMAKE_C_STANDARD 11)

add_executable(1_ex1 Lab_1/ex1.c)
add_executable(1_ex2 Lab_1/ex2.c)
add_executable(1_ex3 Lab_1/ex3.c)

add_executable(2_ex1 Lab_2/ex1.c)
add_executable(2_ex2 Lab_2/ex2.c)
add_executable(2_ex3 Lab_2/ex3.c)

add_executable(3_ex1 Lab_3/ex1.c)
add_executable(3_ex2 Lab_3/ex2.c)
add_executable(3_ex3 Lab_3/ex3.c)

add_executable(4_ex1 Lab_4/ex1.c)
add_executable(4_ex2 Lab_4/ex2.c)
add_executable(4_ex3 Lab_4/ex3.c)

add_executable(5_ex1 Lab_5/ex1.c)
add_executable(5_ex2 Lab_5/ex2.c)
add_executable(5_ex3 Lab_5/ex3.c)

add_executable(6_ex1 Lab_6/ex1.c)
add_executable(6_ex2 Lab_6/ex2.c)
add_executable(6_ex3 Lab_6/ex3.c)

add_executable(7_ex1 Lab_7/ex1.c)
add_executable(7_ex2 Lab_7/ex2.c)
add_executable(7_ex3 Lab_7/ex3.c)

add_executable(8_ex1 Lab_8/ex1.c)
add_executable(8_ex2 Lab_8/ex2.c)
add_executable(8_ex3 Lab_8/ex3.c)

add_executable(9_ex1 Lab_9/ex1.c)
add_executable(9_ex2 Lab_9/ex2.c)
add_executable(9_ex3 Lab_9/ex3.c)

add_executable(10_ex1 Lab_10/ex1.c)
add_executable(10_ex2 Lab_10/ex2.c)
add_executable(10_ex3 Lab_10/ex3.c)

add_executable(11_ex1 Lab_11/ex1.c)
add_executable(11_ex2 Lab_11/ex2.c)
add_executable(11_ex3 Lab_11/ex3.c)
