cmake_minimum_required(VERSION 3.22)
project(PI_2021 C)

set(CMAKE_C_STANDARD 11)

add_executable(1_ex1 Lab_01/ex1.c)
add_executable(1_ex2 Lab_01/ex2.c)
add_executable(1_ex3 Lab_01/ex3.c)

add_executable(2_ex1 Lab_02/ex1.c)
add_executable(2_ex2 Lab_02/ex2.c)
add_executable(2_ex3 Lab_02/ex3.c)

add_executable(3_ex1 Lab_03/ex1.c)
add_executable(3_ex2 Lab_03/ex2.c)
add_executable(3_ex3 Lab_03/ex3.c)

add_executable(4_ex1 Lab_04/ex1.c)
add_executable(4_ex2 Lab_04/ex2.c)
add_executable(4_ex3 Lab_04/ex3.c)

add_executable(5_ex1 Lab_05/ex1.c)
add_executable(5_ex2 Lab_05/ex2.c)
add_executable(5_ex3 Lab_05/ex3.c)

add_executable(6_ex1 Lab_06/ex1.c)
add_executable(6_ex2 Lab_06/ex2.c)
add_executable(6_ex3 Lab_06/ex3.c)

add_executable(7_ex1 Lab_07/ex1.c)
add_executable(7_ex2 Lab_07/ex2.c)
add_executable(7_ex3 Lab_07/ex3.c)

add_executable(8_ex1 Lab_08/ex1.c)
add_executable(8_ex2 Lab_08/ex2.c)
add_executable(8_ex3 Lab_08/ex3.c)

add_executable(9_ex1 Lab_09/ex1.c)
add_executable(9_ex2 Lab_09/ex2.c)
add_executable(9_ex3 Lab_09/ex3.c)

add_executable(10_ex1 Lab_10/ex1.c)
add_executable(10_ex2 Lab_10/ex2.c)
add_executable(10_ex3 Lab_10/ex3.c)

add_executable(11_ex1 Lab_11/ex1.c)
add_executable(11_ex2 Lab_11/ex2.c)
add_executable(11_ex3 Lab_11/ex3.c)
